--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
   },
   "homepage": "https://github.com/csswoman/curriculum-vitae#readme",
   "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "babel-plugin-class-properties": "^1.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1"
   }
 }
