--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "babel-plugin-class-properties": "^1.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "favicons-webpack-plugin": "^3.0.1",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "webpack": "^4.42.1",
